--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+/*variables*/
+:root {
+    --accent1: #a667e5;
+    --accent2a: #52277c;
+    --accent2: #e57667;
+    --accent2a: #993628;
+    --font: #efefef;
+  }
+
+/*page styles*/  
 body {
-    
+    background-color: #090909;
+    color: var(--font);
 }
+
+/*header*/
+
+/*quiz pad*/
+
+
+/*footer*/
